--------------------------------------------------------------------------------
Changes for 1.9.4

New features:

Bug fixes:
 - [ZBX-3657] fixed errors while updating proxy configuration data (Sasha)
 - [ZBX-3656] fixed item filter by data type boolean (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.3

New features:
 - [ZBXNEXT-555] added remote monitoring of JMX counters through Java proxy (asaveljevs,Vedmak,Vlad)
 - [ZBXNEXT-651] added "Boolean" data type for integer item value type (asaveljevs,Vedmak,Vlad)
 - [ZBXNEXT-675] added new icons and a script to create sql file (Elvis,Richlv)
 - [ZBX-1357] Updated Latvian and Russian translations; thanks to Zabbix translators (Richlv)
 - [ZBXNEXT-696] Added support for {IPADDRESS}, {HOST.DNS} and {HOST.CONN} macros in trigger names (rudolfs)
 - [ZBX-3495] fixed interfaceid updated to null when link template (Vedmak)
 - [ZBXNEXT-676] merged host profile and extended host profile (Sasha, Vedmak)

Bug fixes:
 - [ZBX-3623] fixed processing of nanoseconds for history data (Sasha)
 - [ZBX-3634] improved zabbix map API methods (Aly)
 - [ZBX-3579] fixed trigger popup menu in status of triggers (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.2

New features:
 - [ZBXNEXT-673] added support of users scripts on Zabbix Agent and IPMI-based remote commands (Sasha, Vedmak)
 - [ZBXNEXT-631] added custom trigger severities configuration (Sasha, Vedmak)
 - [ZBXNEXT-636] login screen redesign, frontend themes restyle (Aly, Elvis)
 - [ZBXNEXT-635] introduced API wrapper for Zabbix frontend (Vedmak, Aly)
 - [ZBXNEXT-575] added new design for action operation remote commands (Aly,Sasha,Vedmak)
 - [ZBXNEXT-628] added advanced label settings for maps (Aly)
 - [ZBXNEXT-626] added remembering of grid options for maps (KB)
 - [ZBXNEXT-630] added automatic filling of DNS name for discovered and auto-registered devices (Sasha)